AC_INIT()

dnl The MPICH2 top-level configure adds a bunch of flags to the
dnl user-defined CFLAGS by processing different configure command-line
dnl arguments (--enable-g, --enable-default-optimization). These updated
dnl flags are passed down as a separate flag. Here, we don't care about
dnl the user-defined flags, but rather this updated flags, so we just
dnl overwrite CFLAGS with them.
PAC_SUBCONFIG_INIT()

dnl Definitions will be placed in this file rather than in the DEFS variable
AC_CONFIG_HEADER(pmiconf.h)
AH_TOP([/* -*- Mode: C; c-basic-offset:4 ; -*- */
/* Copyright (c) 2003-2011, The Ohio State University. All rights
 * reserved.
 *
 * This file is part of the MVAPICH2 software package developed by the
 * team members of The Ohio State University's Network-Based Computing
 * Laboratory (NBCL), headed by Professor Dhabaleswar K. (DK) Panda.
 *
 * For detailed copyright and licensing information, please refer to the
 * copyright file COPYRIGHT in the top level MVAPICH2 directory.
 *
 */
/*  
 *  (C) 2008 by Argonne National Laboratory.
 *      See COPYRIGHT in top-level directory.
 */
#ifndef PMICONF_H_INCLUDED
#define PMICONF_H_INCLUDED
])
AH_BOTTOM([#endif])

echo "RUNNING CONFIGURE FOR THE SLURM PMI"

PAC_ARG_CACHING
PAC_VPATH_CHECK()
PAC_LOAD_BASE_CACHE
PAC_PROG_MAKE

AC_ARG_WITH(slurm,
    AS_HELP_STRING([--with-slurm], [path to the slurm package]),
    [SLURM_LDFLAGS="-L${with_slurm}/lib"
SLURM_CPPFLAGS="-I${with_slurm}/include"],
    [])
LDFLAGS="$SLURM_LDFLAGS $LDFLAGS"
CPPFLAGS="$SLURM_CPPFLAGS $CPPFLAGS"

AC_CHECK_HEADER([slurm/pmi.h], [], [AC_MSG_ERROR([could not find slurm/pmi.h.  Configure aborted])])
saveLIBS="$LIBS"
LIBS=""
AC_CHECK_LIB([pmi], [PMI_Init], [], AC_MSG_ERROR([could not find libpmi.  Configure aborted]))
SLURM_LIBS="$SLURM_LIBS $LIBS"
LIBS="$LIBS $saveLIBS"

dnl <_OSU_MVAPICH_>
if test -n "$with_slurm"; then
    slurm_ld_library_path=${with_slurm}/lib
    AC_SUBST(slurm_ld_library_path)
fi
dnl </_OSU_MVAPICH_>

AC_SUBST(SLURM_LIBS)
AC_SUBST(SLURM_LDFLAGS)
AC_SUBST(SLURM_CPPFLAGS)

dnl Place holder macro for finalization
PAC_SUBCONFIG_FINALIZE()

AC_OUTPUT(localdefs)
AC_OUTPUT(Makefile)

